force-app/main/default/objects/WebshopProductSliderItem__c/WebshopProductSliderItem__c.object-meta.xml
<CustomObject>
    <description>Junction Object between Product Slider and Product</description>
    <label>Product Slider Item</label>
    <nameField>
        <displayFormat>SLIDERITEM-{0000000}</displayFormat>
        <label>Product Slider Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Slider Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>