force-app/main/default/objects/WebshopProductSliderItem__c/fields/WebshopProductSlider__c.field-meta.xml
<CustomField>
    <fullName>WebshopProductSlider__c</fullName>
    <label>Product Slider</label>
    <referenceTo>WebshopProductSlider__c</referenceTo>
    <relationshipLabel>Product Slider Items</relationshipLabel>
    <relationshipName>WebshopProductSliderItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>